# Skill_Agent_lnd

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  debug_udemy.py  docker-compose.registry.yml  docker-compose.yml  init_template.py  mkdocs.yml  pyproject.toml  verify_agent.py
.github/: CODEOWNERS
.github/workflows/: ci-cd.yml  claude.yaml  claude.yaml.disabled  deploy-docs.yml  docker-build.yml  metadata-extract.yml  pull-and-promote.yml  resolve-image-digest.yml  terraform-plan-apply.yml
docs/: README.md  bootstrap-setup.md  cicd-setup.md  development.md  environment-variables.md  getting-started.md  infrastructure.md  observability.md  production-environment-strategy.md  template-management.md  terraform-infrastructure.md  troubleshooting.md  validating-multiplatform-builds.md
docs/base-infra/: development.md
docs/references/: README.md  bootstrap.md  cicd.md  code-quality.md  deployment.md  docker-compose-workflow.md  dockerfile-strategy.md  testing.md
notebooks/: create_agent_engine.ipynb
src/adk_docker_uv/: server.py
src/adk_docker_uv/agent/: agent.py  callbacks.py
src/adk_docker_uv/utils/: __init__.py  env_parser.py
src/agent_foundation/: __init__.py  agent.py  callbacks.py  prompt.py
src/agent_foundation/utils/: config.py  observability.py
src/skill_agent_lnd/: agent.py  agent_settings.yaml  bigquery_only_dataset_config.json  prompt.py  prompts.py  server.py  tools.py
src/skill_agent_lnd/sub_agents/bigquery/: agent.py  prompts.py  tools.py
src/skill_agent_lnd/sub_agents/bigquery/chase_sql/: chase_db_tools.py  llm_utils.py
src/skill_agent_lnd/sub_agents/bigquery/chase_sql/sql_postprocessor/: sql_translator.py
src/skill_agent_lnd/utils/: create_bq_table.py  observability.py  udemy_client.py  utils.py
terraform/bootstrap/: .terraform.lock.hcl  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
terraform/bootstrap/dev/: .terraform.lock.hcl  main.tf  terraform.tfvars.example  variables.tf
terraform/bootstrap/module/gcp/: main.tf  outputs.tf  terraform.tf  variables.tf
terraform/bootstrap/module/github/: main.tf  variables.tf
terraform/bootstrap/prod/: main.tf  outputs.tf  terraform.tfvars.example
terraform/bootstrap/stage/: main.tf  outputs.tf  providers.tf  terraform.tfvars.example
terraform/main/: .gitignore  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf
tests/: conftest.py  test_callbacks.py  test_config.py  test_env_parser.py  test_integration.py  test_logging_callbacks.py  test_prompt.py  test_tools.py
udemy/: final_example_usage.py  final_udemy_coursefetcher.py
